--- a/references.bib
+++ b/references.bib
@@ -1,5 +1,22 @@
 %% USE BIBTEX ENTRIES FROM INSPIRE, NO SELF-INVENTED SHORT NAMES!
 
+
+%% Arjen 2021
+@article{Arjen_2021,
+   title={Extragalactic magnetic field constraints from ultrahigh-energy cosmic rays from local galaxies},
+   volume={510},
+   ISSN={1365-2966},
+   url={http://dx.doi.org/10.1093/mnras/stab3495},
+   DOI={10.1093/mnras/stab3495},
+   number={1},
+   journal={Monthly Notices of the Royal Astronomical Society},
+   publisher={Oxford University Press (OUP)},
+   author={van Vliet, Arjen and Palladino, Andrea and Taylor, Andrew and Winter, Walter},
+   year={2021},
+   month={Dec},
+   pages={1289–1297}
+}
+
 %% Beck 2007
 @ARTICLE{Beck_2007,
 AUTHOR = {Beck, R. },
